feat: email-verification
